[package]
name = "molt"
version = "0.1.0"
authors = ["Tzu-ping Chung <uranusjr@gmail.com>"]

[dependencies]
clap = "2.33"
dunce = "1.0"
lazy_static = "1.3"
prettytable-rs = "0.8"
regex = "1.1"
rust-embed = "4.3"
rust-ini = "0.13"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3"
unindent = "0.1"
which = "2.0"
