[package]
name = "molt"
version = "0.1.0"
authors = ["Tzu-ping Chung <uranusjr@gmail.com>"]
build = "build.rs"

[[bin]]
name = "molt"
path = "rust/main.rs"

[dependencies]
clap = "2.33"
dunce = "1.0"
lazy_static = "1.3"
prettytable-rs = "0.8"
regex = "1.1"
rust-embed = "4.3"
rust-ini = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
unindent = "0.1"
url = "1.7"
url_serde = "0.2"
which = "2.0"

[build-dependencies]
walkdir = "2.2"
which = "2.0"

[dev-dependencies]
assert-json-diff = "1.0"
